fixed modules issues